--- a/app/src/main/res/layout/activity_grass_information_release.xml
+++ b/app/src/main/res/layout/activity_grass_information_release.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="会员管理"
+            android:text="信息发布"
             android:textColor="@color/color_3"
             android:textSize="@dimen/text_size_16" />
     </RelativeLayout>
