--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,16 +5,22 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="picker_view_bg_topbar">#F5F5F5</color>
     <color name="colorWhite">#FFFFFF</color>
+
+    <color name="color_107">#f2f3f4</color>
+    <color name="color_108">#f7f7f7</color>
+    <color name="color_109">#ffffffff</color>
     <color name="colorBlack">#000000</color>
     <color name="colorRed">#FF0000</color>
     <color name="color_3">#333333</color>
+    <color name="color_2">#222222</color>
     <color name="color_6">#666666</color>
     <color name="color_9">#999999</color>
     <color name="color_dc">#dcdcdc</color>
     <color name="theme_body">#cc22292c</color>
     <color name="color_f6">#f6f6f6</color>
     <color name="text_Grey">#c1c1c2</color>
-
+    <color name="color_e5">#e5e5e5</color>
+    <color name="color_ff97">#ff9700</color>
     <color name="C1">#01A95C</color>
     <color name="C2">#B7B3F6D7</color>
     <color name="C9">#f2f6f9</color>
@@ -61,6 +67,7 @@
     <color name="skipButtonColor">#88C6C8CA</color>
 
     <color name="bg_gray">#f2f2f2</color>
-
+    <color name="app_color_black">#000000</color>
+    <color name="app_color_f6">#f6f6f6</color>
 
 </resources>
